fix gt lang errors

--- a/resources/gregtech/lang/en_us.lang
+++ b/resources/gregtech/lang/en_us.lang
@@ -91,8 +91,8 @@ material.bscco=BSCCO
 material.deshite=Deshite
 material.naquadah_dioxide=Naquadah Dioxide
 material.electron_degenerate_rhenium=Electron Degenerate Rhenium
-material.nylon.name=Nylon 
-material.dark_naquatic_abyssal_alloy.name=Dark Naquatic Abyssal Alloy
+material.nylon=Nylon 
+material.dark_naquatic_abyssal_alloy=Dark Naquatic Abyssal Alloy
 
 
 
