--- a/resources/contenttweaker/lang/en_us.lang
+++ b/resources/contenttweaker/lang/en_us.lang
@@ -1895,3 +1895,17 @@ tile.contenttweaker.electrolyticcell.name=Electrolytic Cell Block
 multiblocktweaker.machine.sonicator.name=Sonicator
 recipemap.sonicator.name=Sonication
 item.contenttweaker.optical_capacitor_base.name=Optical Capacitor Base
+tile.contenttweaker.ultrahighresistanceglass.name=Ultra High Resistance Glass
+tile.contenttweaker.sonicator_casing.name=Sonicator Casing
+item.contenttweaker.thin_nylon_sheet.name=Thin Nylon Sheet
+metaitem.platinum_nanopowder.name=Platinum Nanopowder 
+metaitem.ruthenium_chloride.name=Ruthenium Chloride
+metaitem.platinum_ruthenium_powder.name=Pt-RuO2 Powder
+fluid.ruhtenium_platinum_colloid=Pt-RuO2 Colloid
+fluid.naquatitanium_hydroxide=Naquatitium Hydroxide
+devtech.machine.spincoater.lv.name=Basic Spincoater
+devtech.machine.spincoater.mv.name=Advanced Spincoater
+devtech.machine.spincoater.hv.name=Advanced Spincoater II
+devtech.machine.spincoater.ev.name=Advanced Spincoater III
+devtech.machine.spincoater.iv.name=Elite Spincoater
+devtech.machine.spincoater.luv.name=Elite Spincoater II
