--- a/resources/contenttweaker/lang/en_us.lang
+++ b/resources/contenttweaker/lang/en_us.lang
@@ -1901,7 +1901,7 @@ item.contenttweaker.thin_nylon_sheet.name=Thin Nylon Sheet
 metaitem.platinum_nanopowder.name=Platinum Nanopowder 
 metaitem.ruthenium_chloride.name=Ruthenium Chloride
 metaitem.platinum_ruthenium_powder.name=Pt-RuO2 Powder
-fluid.ruhtenium_platinum_colloid=Pt-RuO2 Colloid
+fluid.ruthenium_platinum_colloid=Pt-RuO2 Colloid
 fluid.naquatitanium_hydroxide=Naquatitium Hydroxide
 devtech.machine.spincoater.lv.name=Basic Spincoater
 devtech.machine.spincoater.mv.name=Advanced Spincoater
@@ -1909,3 +1909,5 @@ devtech.machine.spincoater.hv.name=Advanced Spincoater II
 devtech.machine.spincoater.ev.name=Advanced Spincoater III
 devtech.machine.spincoater.iv.name=Elite Spincoater
 devtech.machine.spincoater.luv.name=Elite Spincoater II
+recipemap.spincoater.name=Spincoating
+fluid.pmda_solution=Pyromellitic Dianhydride Solution
