--- a/resources/contenttweaker/lang/en_us.lang
+++ b/resources/contenttweaker/lang/en_us.lang
@@ -1911,3 +1911,13 @@ devtech.machine.spincoater.iv.name=Elite Spincoater
 devtech.machine.spincoater.luv.name=Elite Spincoater II
 recipemap.spincoater.name=Spincoating
 fluid.pmda_solution=Pyromellitic Dianhydride Solution
+fluid.cyclopentene=Cyclopentene
+tile.contenttweaker.reactor_core_stabilizer.name=Reactor Core Stabilizer
+tile.contenttweaker.atomic_casing.name=Atomic Casing
+multiblocktweaker.machine.superheavy_reactor.name=Super-Heavy Reactor
+recipemap.superheavy_reactor.name=Super-Heavy Reactions
+metaitem.dense_matter.name=Dense Matter
+metaitem.pure_dense_matter.name=Pure Dense Matter
+meatitem.dense_carbon_oxygen_matter.name=Dense Carbon Oxygen Matter
+metaitem.dense_exotic_matter.name=Dense Exotic Matter
+fluid.neodymium_solution.name=Neodymium Solution
