--- a/resources/contenttweaker/lang/en_us.lang
+++ b/resources/contenttweaker/lang/en_us.lang
@@ -1918,6 +1918,16 @@ multiblocktweaker.machine.superheavy_reactor.name=Super-Heavy Reactor
 recipemap.superheavy_reactor.name=Super-Heavy Reactions
 metaitem.dense_matter.name=Dense Matter
 metaitem.pure_dense_matter.name=Pure Dense Matter
-meatitem.dense_carbon_oxygen_matter.name=Dense Carbon Oxygen Matter
 metaitem.dense_exotic_matter.name=Dense Exotic Matter
-fluid.neodymium_solution.name=Neodymium Solution
+fluid.neodymium_solution=Neodymium Solution
+recipemap.bacterial_vat.name=Bacterial Vat
+tile.contenttweaker.heat_vent.name=Heat Vent
+tile.contenttweaker.mervin_tara_carbonoxygen_casing.name=Mervin Tara Carbonoxygen Casing
+tile.contenttweaker.neutron_tube_casing.name=Neutron Tube Casing
+tile.contenttweaker.electromagnetic_acceleration_pipe_box.name=Electromagnetic Acceleration Pipe Box
+tile.contenttweaker.stella_anvil_module.name=Stellar Anvil Module
+multiblocktweaker.machine.stellar_pressure_generator.name=Stellar Pressure Generator
+metaitem.dense_carbon_oxygen_matter.name=Dense Carbon Oxygen Matter
+recipemap.stella_anvil_module.name=Stellar Anvil Module
+fluid.superfluid_carbon_oxygen_mixture_plasma=Superfluid Carbon Oxygen Mixture Plasma
+item.contenttweaker.uev_superconductor_assembly.name=UEV Superconductor Assembly
