--- a/resources/contenttweaker/lang/en_us.lang
+++ b/resources/contenttweaker/lang/en_us.lang
@@ -1859,6 +1859,7 @@ tile.contenttweaker.extreme_rocket_thruster.name=Extreme Rocket Thruster
 item.contenttweaker.trenched_superconductor_layered_uhasoc_wafer.name=Trenched Superconductor Layered UHaSoC Wafer
 item.contenttweaker.seared_gear.name=Seared Gear
 devtech.machine.steam_foundry.name=Steam Foundry
+recipemap.steam_foundry.name=Steam Foundry
 tile.contenttweaker.extreme_protective_outer_wall.name=Extreme Protective Outer Wall
 tile.contenttweaker.rocket_fuel_tank.name=Rocket Fuel Tank
 tile.contenttweaker.rocket_thruster_top.name=Rocket Thruster Top
@@ -1936,10 +1937,10 @@ item.contenttweaker.used_lafeaso1_catalyst.name=Used LaFeAsO1 Catalyst
 item.contenttweaker.lafeaso1_pellets.name=LaFeAsO1 Pellets
 fluid.lafeaso1_mixture=LaFeAsO1 Mixture
 multiblocktweaker.machine.catalytic_cracking_unit.name=Catalytic Cracking Unit
-recipemap.catalytic_cracking_unit=Catalytic Cracking
+recipemap.catalytic_cracking_unit.name=Catalytic Cracking
 multiblocktweaker.machine.tube_furnace.name=Tube Furnace
 recipemap.tube_furnace.name=Tube Furnace
 metaitem.lafeaso1_catalyst_preparation.name=LaFeAsO1 Catalyst Preparation
-
+metaitem.raney_nickel.name=Raney Nickel Catalyst
 
 
