--- a/resources/gregtech/lang/en_us.lang
+++ b/resources/gregtech/lang/en_us.lang
@@ -95,7 +95,7 @@ material.nylon=Nylon
 material.dark_naquatic_abyssal_alloy=Dark Naquatic Abyssal Alloy
 material.polycyclopentene=Poly(cyclopentene)
 material.metallic_hydrogen=Metallic Hydrogen
-
+material.tara_c_o_alloy=Tara-C-O-Alloy
 
 gtadditions.machine.convert_forge.uxv.4.name=Forge Energy Converter (UXV)
 gtadditions.machine.convert_forge.uxv.16.name=Forge Energy Converter (UXV)
