--- a/resources/contenttweaker/lang/en_us.lang
+++ b/resources/contenttweaker/lang/en_us.lang
@@ -1957,3 +1957,14 @@ tile.contenttweaker.space_elevator_block.name=Space Elevator Block
 tile.contenttweaker.space_elevator_railway_block.name=Space Elevator Railway Block
 multiblocktweaker.machine.space_elevator.name=Space Elevator
 recipemap.space_elevator.name=Space Elevator
+multiblocktweaker.machine.flash_chromatography_system.name=Flash Chromatography System
+recipemap.flash_chromatography_system.name=Flash Chromatography
+fluid.decanedioic_acid=1,10-Decanedioic Acid
+item.contenttweaker.space_assembler_module.name=Space Assembler Module MK I
+item.contenttweaker.space_assembler_module_mk2.name=Space Assembler Module MK II
+item.contenttweaker.space_assembler_module_mk3.name=Space Assembler Module MK III
+item.contenttweaker.space_mining_module.name=Space Mining Module MK I
+item.contenttweaker.space_mining_module_mk2.name=Space Mining Module MK II
+item.contenttweaker.space_mining_module_mk3.name=Space Mining Module MK III
+item.contenttweaker.space_ultraclean_module.name=Space Ultraclean Module MK I
+item.contenttweaker.space_ctrystal_growth_module.name=Space Crystal Growth Module MK I
