--- a/resources/gregtech/lang/en_us.lang
+++ b/resources/gregtech/lang/en_us.lang
@@ -96,6 +96,9 @@ material.dark_naquatic_abyssal_alloy=Dark Naquatic Abyssal Alloy
 material.polycyclopentene=Poly(cyclopentene)
 material.metallic_hydrogen=Metallic Hydrogen
 material.tara_c_o_alloy=Tara-C-O-Alloy
+material.trinaquadalloy=Trinaquadallloy
+material.nylon610=Nylon-6,10
+
 
 gtadditions.machine.convert_forge.uxv.4.name=Forge Energy Converter (UXV)
 gtadditions.machine.convert_forge.uxv.16.name=Forge Energy Converter (UXV)
