fix small spelling error in Crystal Growth Module

--- a/resources/contenttweaker/lang/en_us.lang
+++ b/resources/contenttweaker/lang/en_us.lang
@@ -1967,4 +1967,17 @@ item.contenttweaker.space_mining_module.name=Space Mining Module MK I
 item.contenttweaker.space_mining_module_mk2.name=Space Mining Module MK II
 item.contenttweaker.space_mining_module_mk3.name=Space Mining Module MK III
 item.contenttweaker.space_ultraclean_module.name=Space Ultraclean Module MK I
-item.contenttweaker.space_ctrystal_growth_module.name=Space Crystal Growth Module MK I
+item.contenttweaker.space_crystal_growth_module.name=Space Crystal Growth Module MK I
+metaitem.enriched_naquadah_chloride.name=Enriched Naquadah Chloride Dust
+metaitem.enriched_naquadah_oxide.name=Enriched Naquadah Oxide Dust
+metaitem.manganese_diacetate.name=Manganese Diacetate Dust
+fluid.dihydroxystearic_acid=Dihydroxystearic Acid
+fluid.diethylketone=Diethyl Ketone 
+fluid.glacial_acetic_acid=Glacial Acetic Acid
+fluid.purified_oleic_acid=Purified Oleic Acid 
+fluid.2-hydroxypropionimidamide=2-Hydroxypropionimidamide
+fluid.oleic_acid_mixture=Oleic Acid Mixture
+fluid.peracetic_acid_mixture=Peracetic Acid Mixture
+fluid.heated_decanedioic_acid=Heated 1,10-Decanedioic Acid
+fluid.n-6-aminohexylsebacamide=N-(6-aminohexyl)sebacamide
+item.contenttweaker.nylon610_spinneret.name=Nylon-6,10 Spinneret 
