--- a/resources/contenttweaker/lang/en_us.lang
+++ b/resources/contenttweaker/lang/en_us.lang
@@ -1983,3 +1983,8 @@ fluid.n-6-aminohexylsebacamide=N-(6-aminohexyl)sebacamide
 item.contenttweaker.nylon610_spinneret.name=Nylon-6,10 Spinneret 
 multiblocktweaker.machine.sealed_reaction_chamber.name=Sealed Reaction Chamber
 recipemap.sealed_reaction_chamber.name=Sealed Reaction Chamber
+fluid.carboxylic_acid_mixture=Carboxylic Acid Mixture
+fluid.propanal=Propanal
+fluid.n_propyl_alcohol=n-Propyl Alcohol
+fluid.propylamine=Propylamine
+fluid.propanal_mixture=Propanal Mixture
