fix lang spelling mistakes

--- a/resources/contenttweaker/lang/en_us.lang
+++ b/resources/contenttweaker/lang/en_us.lang
@@ -1950,8 +1950,8 @@ fluid.potassium_carbonate_mixture=Potassium Carbonate Mixture
 fluid.oxygen_reduced_osmium_solution=Oxygen Reduced Osmium Solution
 fluid.fuming_hydrogen=Fuming Hydrogen
 fluid.decene=Decene 
-multiblocktweaker.machine.primitive_blast_furnace.name=Primitive Blast Furnace
-recipemap.primitive_blast_furnace.name=Primtive Blasting
+multiblocktweaker.machine.primitive_blast_furnaces.name=Primitive Blast Furnace
+recipemap.primitive_blast_furnaces.name=Primtive Blasting
 tile.contenttweaker.maraging_steel_frame_300.name=Maraging Steel 250 Frame
 tile.contenttweaker.space_elevator_block.name=Space Elevator Block
 tile.contenttweaker.space_elevator_railway_block.name=Space Elevator Railway Block
