--- a/resources/contenttweaker/lang/en_us.lang
+++ b/resources/contenttweaker/lang/en_us.lang
@@ -43,12 +43,10 @@ item.contenttweaker.bisphenolbingot.name=Bisphenol-B Ingot
 item.contenttweaker.bisphenolbsheet.name=Bisphenol-B Sheet
 item.contenttweaker.bisphenolbdust.name=Bisphenol-B Dust
 fluid.tetraethylene=Tetra Ethylene
-item.contenttweaker.hotvibrantalloyingot.name=Hot Vibrant Alloy Ingot
 item.contenttweaker.vibrantalloyplate.name=Vibrant Alloy Plate
 item.contenttweaker.heavydutyalloyt1.name=Heavy Duty Alloy T1
 item.contenttweaker.titaniumtetrachloridedust.name=Solidified Titanium Tetrachloride
 item.contenttweaker.heavydutyalloyt2.name=Heavy Duty Alloy T2
-item.contenttweaker.hotplatinumingot.name=Hot Platinum Ingot
 fluid.moltenpulsatingiron=Molten Pulsating Iron
 item.contenttweaker.heavydutyalloyt3.name=Heavy Duty Alloy T3
 item.contenttweaker.keyboard.name=Keyboard
@@ -106,8 +104,6 @@ item.contenttweaker.diamondaluminiumcasing.name=Diamond-Aluminium Casing
 item.contenttweaker.compressedironnugget.name=Compressed Iron Nugget
 fluid.moltenvibrantalloy=Molten Vibrant Alloy
 tile.contenttweaker.advancedcraftingunit.name=Advanced Crafting Unit
-item.contenttweaker.hotplatinumtitaniumingot.name=Hot Platinum Titanium Ingot
-item.contenttweaker.hotsoulariumingot.name=Hot Soularium Ingot
 item.contenttweaker.soulariummetallicpowder.name=Soularium Metallic Powder
 item.contenttweaker.refinedsoulariumpowder.name=Refined Soularium Powder
 item.contenttweaker.hvroboticcomponent.name=HV Robotic Component
@@ -124,7 +120,6 @@ item.contenttweaker.itemprocessorcoret3.name=Item Processor Core T3
 item.contenttweaker.radiationproofplate.name=Radiation Proof Plate
 item.contenttweaker.wrappeduraniumingot.name=Wrapped Uranium Ingot
 item.contenttweaker.graphiteuraniummixturedust.name=Graphite-Uranium Mixture Dust
-item.contenttweaker.hotatomicseperationcatalyst.name=Hot Atomic Seperation Catalyst
 item.contenttweaker.rawatomicsperationcatalyst.name=Raw Atomic Seperation Catalyst
 item.contenttweaker.advancedradiationproofplate.name=Advanced Radiation Proof Plate
 item.contenttweaker.hicomputationstationmk1.name=Hi-Computation Station MK-I
@@ -132,9 +127,7 @@ item.contenttweaker.hicomputationstationmk2.name=Hi-Computation Station MK-II
 item.contenttweaker.hicomputationstationmk3.name=Hi-Computation Station MK-III
 item.contenttweaker.hicomputationstationmk4.name=Hi-Computation Station MK-IV Prototype
 item.contenttweaker.hicomputationstationmk5.name=Hi-Computation Station MK-V FinalType
-item.contenttweaker.hotmarcem200steelingot.name=Hot MAR-Ce-M200 Steel Ingot
 item.contenttweaker.microheater.name=Micro-Heater
-item.contenttweaker.hothikariumingot.name=Hot Hikarium Ingot
 item.contenttweaker.wrappedplutonium.name=Wrapped Plutonium Ingot
 item.contenttweaker.highdensityplutoniumnugget.name=High Density Plutonium Nugget
 item.contenttweaker.highdensityplutonium.name=High Density Plutonium
@@ -172,14 +165,10 @@ item.contenttweaker.tungsticnaquadah.name=Tungstic Naquadah
 fluid.moltentungsticnaquadah=Molten Tungstic Naquadah
 fluid.sterilizedbiocatalystmedium=Sterilized Bio Catalyst Medium
 fluid.rawsterilizedbiocatalystmedium=Raw Sterilized Bio Catalyst Medium
-item.contenttweaker.hotmanyullyningot.name=Hot Manyullyn Ingot
 tile.contenttweaker.naquadahfuelrefinerycasing.name=Naquadah Fuel Refinery Casing
 tile.contenttweaker.fieldrestrictionglass.name=Field Restriction Glass
 tile.contenttweaker.fieldrestrictioncoil.name=Field Restriction Coil
 fluid.naqudahasphalt=Naquadah Asphalt
-item.contenttweaker.hotadamantiumalloyingot.name=Hot Adamantium Alloy Ingot
-item.contenttweaker.hotblackplutoniumingot.name=Hot Black Plutonium
-item.contenttweaker.hotfluxedelectrumingot.name=Hot Fluxed Electrum Ingot
 fluid.moderatelycrackednaquadahasphalt=Moderately Cracked Naquadahasphalt
 fluid.acidnaquadahemulsion=Acid Naquadah Emulsion
 fluid.naquadahemulsion=Naquadah Emulsion
@@ -284,7 +273,6 @@ item.contenttweaker.circuitcompundmk1.name=Circuit Compound MK I
 item.contenttweaker.circuitcompundmk2.name=Circuit Compound MK II
 item.contenttweaker.circuitcompundmk3.name=Circuit Compound MK III
 item.contenttweaker.advancedcircuitmold.name=Advanced Circuit Mold
-item.contenttweaker.hotactivatednaquadahingot.name=Hot Activated Naquadah Ingot
 fluid.molteninfnite=???
 item.contenttweaker.cosmicneutroniumcoil.name=Cosmic Neutronium Coil
 item.contenttweaker.neutroniumcoil.name=Neutronium Coil
@@ -313,17 +301,12 @@ item.contenttweaker.venus.name=Venus
 multiblocktweaker.machine.interstellar_liquid_collector.name=Interstellar Liquid Collector
 multiblocktweaker.multiblock.interstellar_liquid_collector.description=The Interstellar Liquid Collector, it can collect atmospheric gasses / rain of other planets, the power consumption will be i=rocket tier voltage  r=rarity of gas (defined by wich is the most useful)   i * 2 * r
 item.contenttweaker.uhepic.name=UEPIC
-item.contenttweaker.hotantoingot.name=Hot ANTO Ingot
-item.contenttweaker.hotultimateingot.name=Hot Ultimate Ingot
 item.contenttweaker.trappist1c.name=Trappist 1C
 item.contenttweaker.trappist1e.name=Trappist 1E
-item.contenttweaker.cupbase.name=Cup Base
-item.contenttweaker.cupholder.name=Cup Holder
 item.contenttweaker.tiedhay.name=Tied Hay
 tile.contenttweaker.electricalrutherfordiumcupritecasing.name=Electrical Rutherfordium Cuprite Casing
 multiblocktweaker.machine.hyper_chemical_plant.name=Hyper Chemical Plant
 multiblocktweaker.multiblock.hyper_chemical_plant.description=The Hyper Chemical Plant is a more advanced varient of the chemical plant, it is used in late game circuit progression and some minor gates
-item.contenttweaker.hotincoloy945xingot.name=Hot Incoloy 945X Ingot
 tile.contenttweaker.particleprotectioncasing.name=Particle Protection Casing
 recipemap.hyper_chemical_plant.name=Hyper Chemical Plant
 recipemap.molecular_transformer.name=Molecular Transformer
@@ -569,7 +552,6 @@ item.contenttweaker.wrapofruriditfinewire.name=Wrap of Ruridit Fine Wire
 item.contenttweaker.wrapofosmiumfinewire.name=Wrap of Osmium Fine Wire
 item.contenttweaker.wrapofhsssfoil.name=Wrap of HSS-S Foil
 item.contenttweaker.wrapofelectrumfoil.name=Wrap of Electrum Foil
-item.contenttweaker.buildingwrench.name=Building Wrench
 tile.contenttweaker.pbistrengthenedtetrixcasing.name=PBI Strengthened Tetrix Casing
 fluid.dissolvingfluid=Dissolving Fluid
 fluid.aluminosilicatewoolsolution=Alumino Silicate Wool Solution
@@ -835,11 +817,6 @@ fluid.crackedlightradox=Cracked Light Radox
 fluid.heavyradox=Heavy Radox
 fluid.lightradox=Light Radox
 item.contenttweaker.startiumdust.name=Startium Dust
-item.contenttweaker.tungstalloyonedust.name=Tungstalloy-1 Dust
-item.contenttweaker.zircalloydust.name=Zircalloy Dust
-item.contenttweaker.tungstalloytwodust.name=Tungstalloy-2 Dust
-item.contenttweaker.tungstalloytwohotingot.name=Hot Tungstalloy-2 Ingot
-item.contenttweaker.tungstalloytwoingot.name=Tungstalloy-2 Ingot
 item.contenttweaker.blackpearl.name=Black Pearl
 item.contenttweaker.platinumpearlcatalyst.name=Platinum Pearl Catalyst
 tile.contenttweaker.soulariumreinforcedglass.name=Soularium Reinforced Glass
@@ -1762,7 +1739,6 @@ fluid.liquid_salt=Salt
 fluid.very_hot_xenon=Very Hot Xenon
 fluid.helium_4=Helium-4
 fluid.palmatic_acid=Palmatic Acid
-fluid.neodymium_rich_monazite_solution
 fluid.liquid_cryolite=Cryolite
 fluid.hotic2coolant=Hot IC2 Coolant
 fluid.impure_monazite_ore_byproduct_slurry=Impure Monazite Ore Byproduct Slurry
@@ -1988,3 +1964,34 @@ fluid.propanal=Propanal
 fluid.n_propyl_alcohol=n-Propyl Alcohol
 fluid.propylamine=Propylamine
 fluid.propanal_mixture=Propanal Mixture
+item.contenttweaker.dielectric_film.name=Dielectric Film
+item.contenttweaker.electrode_pasted_ceramic_plate.name=Electrode Pasted Ceramic Plate
+item.contenttweaker.silicon_dioxide_chip.name=Silicon Dioxide Chip
+item.contenttweaker.lasered_silicon_chip.name=Lasered Silicon Chip
+item.contenttweaker.diode_imprinted_polysilicon_chip.name=Diode Imprinted Polysilicon Chip
+item.contenttweaker.sputtered_silicon_chip.name=Sputtered Silicon Chip
+item.contenttweaker.coated_silicon_chip.name=Coated Silicon Chip
+item.contenttweaker.silicon_nitride_chip.name=Silicon Nitride Chip
+item.contenttweaker.gold_electrode.name=Gold Electrode
+item.contenttweaker.silicon_nitride_implanted_polysilicon_wafer.name=Silicon Nitride Implanted Polysilicon Wafer
+item.contenttweaker.coated_polysilicon_wafer.name=Coated Polysilicon Wafer
+item.contenttweaker.diode_imprinted_polysilicon_wafer.name=Diode Imprinted Polysilicon Wafer
+item.contenttweaker.diode_lithography_mask.name=Diode Lithography Mask
+multiblocktweaker.machine.vacuum_metallizer.name=Vacuum Metallizer
+recipemap.vacuum_metallizer.name=Vacuum Metallizer 
+metaitem.compressed_diamond_dust.name=Compressed Diamond Dust
+fluid.dielectric_paste=Dielectric Paste 
+fluid.naphthalene_dicarboxaldehyde=2,6-Naphthalene dicarboxaldehyde
+item.contenttweaker.silicon_nitride_wafer.name=Silicon Nitride Wafer
+item.contenttweaker.circiut_board_lithography_mask.name=Circuit Board Lithography Mask
+item.contenttweaker.electroplated_epoxy_board.name=Electroplated Epoxy Board
+item.contenttweaker.coated_expoy_board.name=Coated Epoxy Board
+item.contenttweaker.etched_circuit_board.name=Etched Circuit Board
+devtech.machine.uv_light.mv.name=Advanced UV-Light
+devtech.machine.uv_light.hv.name=Advanced Uv-Light II
+devtech.machine.uv_light.ev.name=Advanced Uv-Light III
+devtech.machine.uv_light.iv.name=Insane Uv-Light
+devtech.machine.uv_light.luv.name=Insane Uv-Light II
+fluid.6040_tin_head_solution=60/40 Tin-Lead Solution
+fluid.copper_sulfate_solution=Copper Sulfate Solution
+fluid.polyethylene_naphthalate=Polyethylene Naphthalate
