--- a/resources/contenttweaker/lang/en_us.lang
+++ b/resources/contenttweaker/lang/en_us.lang
@@ -1985,13 +1985,14 @@ fluid.naphthalene_dicarboxaldehyde=2,6-Naphthalene dicarboxaldehyde
 item.contenttweaker.silicon_nitride_wafer.name=Silicon Nitride Wafer
 item.contenttweaker.circiut_board_lithography_mask.name=Circuit Board Lithography Mask
 item.contenttweaker.electroplated_epoxy_board.name=Electroplated Epoxy Board
-item.contenttweaker.coated_expoy_board.name=Coated Epoxy Board
+item.contenttweaker.coated_epoxy_board.name=Coated Epoxy Board
 item.contenttweaker.etched_circuit_board.name=Etched Circuit Board
 devtech.machine.uv_light.mv.name=Advanced UV-Light
 devtech.machine.uv_light.hv.name=Advanced Uv-Light II
 devtech.machine.uv_light.ev.name=Advanced Uv-Light III
 devtech.machine.uv_light.iv.name=Insane Uv-Light
 devtech.machine.uv_light.luv.name=Insane Uv-Light II
-fluid.6040_tin_head_solution=60/40 Tin-Lead Solution
+fluid.6040_tin_lead_solution=60/40 Tin-Lead Solution
 fluid.copper_sulfate_solution=Copper Sulfate Solution
 fluid.polyethylene_naphthalate=Polyethylene Naphthalate
+recipemap.ion_implanter.name=Ion Implanter
