fix WIldnature TPS Issues

--- a/resources/contenttweaker/lang/en_us.lang
+++ b/resources/contenttweaker/lang/en_us.lang
@@ -1996,3 +1996,53 @@ fluid.6040_tin_lead_solution=60/40 Tin-Lead Solution
 fluid.copper_sulfate_solution=Copper Sulfate Solution
 fluid.polyethylene_naphthalate=Polyethylene Naphthalate
 recipemap.ion_implanter.name=Ion Implanter
+tile.contenttweaker.fused_quartz_block.name=Fused Quartz Block
+item.contenttweaker.ga_as_wafer.name=GaAs Wafer
+item.contenttweaker.p_type_doped_ga_as_wafer.name=p-type Doped GaAs Wafer
+item.contenttweaker.doped_ga_as_wafer.name=Doped GaAs Wafer
+item.contenttweaker.engraved_ga_as_wafer.name=Engraved GaAs Wafer
+item.contenttweaker.etched_ga_as_wafer.name=Etched GaAs Wafer
+item.contenttweaker.passivated_epitaxial_ga_as_wafer.name=Passivated Epitaxial GaAs Wafer
+item.contenttweaker.nano_smd_diode_wafer.name=Nano SMD Diode Wafer
+item.contenttweaker.ga_as_seed_crystal.name=GaAs Seed Crystal
+item.contenttweaker.zone_refined_ga_as_boule.name=Zone Refined GaAs Boule
+item.contenttweaker.ga_as_boule.name=GaAs Boule
+item.contenttweaker.electroplated_expoy_board.name=Electroplated Epoxy Board
+devtech.machine.plasma_etcher.hv.name=Advanced Plasma Etcher II
+devtech.machine.plasma_etcher.ev.name=Advanced Plasma Etcher III
+devtech.machine.plasma_etcher.iv.name=Elite Plasma Etcher
+devtech.machine.plasma_etcher.luv.name=Elite Plasma Etcher II
+devtech.machine.plasma_etcher.zpm.name=Elite Plasma Etcher III
+multiblocktweaker.machine.cryogenic_reactor.name=Cryogenic Reactor
+multiblocktweaker.machine.crystallization_cruicible.name=Crystallization Cruicible
+fluid.arsine_vapor=Arsine Vapor
+fluid.gallium_vapor=Gallium Vapor
+fluid.sulfur_dichloride=Sulfur Dichloride
+fluid.arsine=Arsine
+item.contenttweaker.fused_quartz.name=Fused Quartz
+fluid.bcl3_cl2_ar_etchant=BCl3/Cl2/Ar Etchant
+item.contenttweaker.au_ge_ni_alloy_stack.name=Au/Ge/Ni Alloy Stack
+fluid.diethylzinc=Diethylzinc
+fluid.hexafluoroacetone=Hexafluoroacetone
+fluid.trimethylgallium=Trimethylgallium
+fluid.glycidol_ether=Glycidol Ether
+fluid.resin_enhancer=Resin Enhancer
+fluid.sulfur_hexafluoride=Sulfur Hexafluoride 
+fluid.dicyandiamide=dicyandiamide
+fluid.glycidol_preparation_mixture=Glycidol Preparation Mixture
+fluid.cyandiamide=Cyandiamide
+fluid.unrefined_epoxy_resin=Unrefined Epoxy Resin 
+fluid.glycidol=Glycidol
+multiblocktweaker.machine.mocvd_unit.name=MOCVD Unit
+recipemap.mocvd_unit.name=Organometallic Chemical Vapor Deposition
+multiblocktweaker.machine.reactive_ion_etcher.name=Reactive Ion Etcher
+recipemap.reactive_ion_etcher.name=Reactive Ion Etching
+metaitem.cobalt_nitrate.name=Cobalt Nitrate Dust
+metaitem.sodium_cyandiamide.name=Sodium Cyandiamide
+devtech.machine.engraving_unit_s.lv.name=Basic Engraving Unit
+devtech.machine.engraving_unit_s.mv.name=Advanced Engraving Unit
+devtech.machine.engraving_unit_s.hv.name=Advanced Engraving Unit II
+devtech.machine.engraving_unit_s.ev.name=Advanced Engraving Unit III
+devtech.machine.engraving_unit_s.iv.name=Elite Engraving Unit 
+devtech.machine.engraving_unit_s.luv.name=Elite Engraving Unit II
+devtech.machine.engraving_unit_s.zpm.name=Elite Engraving Unit III
