Fix Spelling mistakes

--- a/resources/contenttweaker/lang/en_us.lang
+++ b/resources/contenttweaker/lang/en_us.lang
@@ -898,6 +898,7 @@ multiblocktweaker.machine.vulcanized_press.name=Vulcanized Press
 multiblocktweaker.machine.vis_breaker.name=Vis Breaker
 multiblocktweaker.machine.vacuum_distillation_tower.name=Vacuum Distillation Tower
 multiblocktweaker.machine.tree_farm.name=Tree Farm
+recipemap.tree_farm.name=Tree Farm
 multiblocktweaker.machine.dilution_tank.name=Dilution Tank
 multiblocktweaker.machine.sintering_oven.name=Sintering Oven
 multiblocktweaker.machine.large_rock_breaker.name=Large Rock Breaker
@@ -935,6 +936,7 @@ multiblocktweaker.machine.precise_assembler.name=Precise Assembler
 multiblocktweaker.machine.neutron_accelerator.name=Neutron Accelerator
 multiblocktweaker.machine.transcendant_plasma_mixer.name=Transcendant Plasma Mixer
 multiblocktweaker.machine.gravity_settler_tank.name=Gravity Settler Tank
+recipemap.gravity_settler_tank.name=Gravity Settler Tank
 multiblocktweaker.machine.matter_dissovler.name=Matter Dissolver
 multiblocktweaker.machine.froth_flotation_cell.name=Froth Flotation Cell
 multiblocktweaker.machine.cosmic_pneumatic_chamber.name=Cosmic Pneumatic Chamber
@@ -1642,7 +1644,7 @@ fluid.ethoxylated_nonylphenol=Ethoxylated Nonylphenol
 fluid.nonoxynol-9_solution=Nonoxynol-9 Solution
 item.contenttweaker.drone_pad.name=Drone Landing Pad
 item.contenttweaker.single_josephson_junction_lithography_mask.name=Single Josephson Junction Lithography Mask
-recipemap.enzymatic_hydrolisis_tank=Enzymatic Hydrolisis Tank
+recipemap.enzymatic_hydrolisis_tank.name=Enzymatic Hydrolisis Tank
 item.contenttweaker.platinum_desh_tungstensteel_compressed_plate.name=Platinum Desh Tungstensteel Compressed Plate
 recipemap.rocket_three.name=T3 Rocket
 multiblocktweaker.machine.rocket_three.name=T3 Rocket
@@ -2014,6 +2016,7 @@ devtech.machine.plasma_etcher.iv.name=Elite Plasma Etcher
 devtech.machine.plasma_etcher.luv.name=Elite Plasma Etcher II
 devtech.machine.plasma_etcher.zpm.name=Elite Plasma Etcher III
 multiblocktweaker.machine.cryogenic_reactor.name=Cryogenic Reactor
+recipemap.cryogenic_reactor.name=Cryogenic Reaction
 multiblocktweaker.machine.crystallization_cruicible.name=Crystallization Cruicible
 fluid.arsine_vapor=Arsine Vapor
 fluid.gallium_vapor=Gallium Vapor
@@ -2046,3 +2049,36 @@ devtech.machine.engraving_unit_s.ev.name=Advanced Engraving Unit III
 devtech.machine.engraving_unit_s.iv.name=Elite Engraving Unit 
 devtech.machine.engraving_unit_s.luv.name=Elite Engraving Unit II
 devtech.machine.engraving_unit_s.zpm.name=Elite Engraving Unit III
+multiblocktweaker.machine.electron_beam_lithographer.name=Electron Beam Lithographer
+recipemap.electron_beam_lithographer.name=Electron Beam Lithography
+item.contenttweaker.passivated_spincoated_ga_as_wafer.name=Passivated Spincoated GaAs Wafer
+item.contenttweaker.spincoated_ga_as_wafer.name=Spincoated GaAs Wafer
+item.contenttweaker.ga_as_wafer_die.name=GaAs Wafer Die
+item.contenttweaker.bonded_ga_as_wafer.name=Bonded GaAs Wafer
+item.contenttweaker.coated_layered_ga_as_wafer.name=Coated Layered GaAs Wafer
+item.contenttweaker.transistor_lithography_mask.name=Transistor Lithography Mask
+item.contenttweaker.masked_ga_as_wafer.name=Masked GaAs Wafer
+item.contenttweaker.sputtered_ga_as_wafer.name=Sputtered GaAs Wafer
+item.contenttweaker.etched_spincoated_ga_as_wafer.name=Etched Spincoated GaAs Wafer
+devtech.machine.engraving_unit_s.uv.name=Ultimate Engraving Unit
+devtech.machine.engraving_unit_s.max.name=MAX Engraving Unit
+devtech.machine.automatic_wire_bonder.lv.name=Basic Automatic Wire Bonder 
+devtech.machine.automatic_wire_bonder.mv.name=Advanced Automatic Wire Bonder 
+devtech.machine.automatic_wire_bonder.hv.name=Advanced Automatic Wire Bonder II
+devtech.machine.automatic_wire_bonder.ev.name=Advanced Automatic Wire Bonder III
+devtech.machine.automatic_wire_bonder.iv.name=Elite Automatic Wire Bonder
+devtech.machine.automatic_wire_bonder.luv.name=Elite Automatic Wire Bonder II
+devtech.machine.automatic_wire_bonder.zpm.name=Elite Automatic Wire Bonder III
+devtech.machine.automatic_wire_bonder.uv.name=Ultimate Automatic Wire Bonder 
+devtech.machine.automatic_wire_bonder.max.name=Max Automatic Wire Bonder 
+multiblocktweaker.machine.trickle_bed_reactor.name=Trickle Bed Reactor
+recipemap.trickle_bed_reactor.name=Trickle Bed Reaction
+multiblocktweaker.machine.oxidation_furnace.name=Oxidation Furnace
+recipemap.oxidation_furnace.name=Oxidation Furnace
+metaitem.aluminium_gallium_arsenide.name=Aluminium Gallium Arsenide Dust
+metaitem.indium_gallium_arsenide.name=Indium Gallium Arsenide Dust
+recipemap.engraving_unit_s.name=Engraving Unit
+recipemap.uv_light.name=UV Light
+recipemap.automatic_wire_bonder.name=Automatic Wire Bonding
+item.contenttweaker.layered_ga_as_wafer.name=Layered GaAs Wafer
+fluid.pyromellitic_dianhydride_oxydianilin=Pyromellitic Dianhydride-Oxydianilin
