--- a/resources/contenttweaker/lang/en_us.lang
+++ b/resources/contenttweaker/lang/en_us.lang
@@ -2082,3 +2082,31 @@ recipemap.uv_light.name=UV Light
 recipemap.automatic_wire_bonder.name=Automatic Wire Bonding
 item.contenttweaker.layered_ga_as_wafer.name=Layered GaAs Wafer
 fluid.pyromellitic_dianhydride_oxydianilin=Pyromellitic Dianhydride-Oxydianilin
+item.contenttweaker.exposed_ga_as_substrate.name=Exposed GaAs Substrate 
+item.contenttweaker.gallium_arsenide_substrate.name=Gallium Arsenide Substrate 
+item.contenttweaker.dried_ga_as_substrate.name=Dried GaAs Substrate 
+item.contenttweaker.removed_ga_as_substrate.name=Removed GaAs Substrate 
+item.contenttweaker.spincoated_dried_ga_as_substrate.name=Spincoated Dried GaAs Substrate 
+item.contenttweaker.sputtered_ga_as_substrate.name=Sputtered Ga As Substrate 
+item.contenttweaker.chromium_shadow_mask.name=Chromium Shadow Mask 
+item.contenttweaker.cured_ga_as_substrate.name=Cured GaAs Substrate 
+item.contenttweaker.bitumen_crystal.name=Bitumen Crystal 
+item.contenttweaker.servo.name=Servo 
+item.contenttweaker.tar.name=Tar Ball 
+item.contenttweaker.nano_smd_resistor_substrate.name=Nano SMD Resistor Substrate 
+item.contenttweaker.spincoated_ga_as_substrate.name=Spincoated GaAs Substrate 
+item.contenttweaker.coated_ga_as_substrate.name=Coated GaAs Substrate 
+item.contenttweaker.electrode_deposited_ga_as_substrate.name=Electrode Deposited GaAs Substrate 
+devtech.machine.dryer.lv.name=Basic Dryer 
+devtech.machine.dryer.mv.name=Advanced Dryer 
+devtech.machine.dryer.hv.name=Advanced Dryer II
+devtech.machine.dryer.ev.name=Advanced Dryer III
+devtech.machine.dryer.iv.name=Elite Dryer 
+devtech.machine.dryer.luv.name=Elite Dryer II
+devtech.machine.dryer.zpm.name=Elite Dryer III
+devtech.machine.dryer.uv.name=Ultimate Dryer 
+recipemap.dryer.name=Drying
+multiblocktweaker.machine.high_vacuum_evaporation_system.name=High Vacuum Evaporation System 
+metaitem.silicon_nitride.name=Silicon Nitride Dust
+fluid.indium_gallium_arsenide_substrate=Indium Gallium Arsnide Substrate 
+fluid.mana=Mana
