--- a/resources/contenttweaker/lang/en_us.lang
+++ b/resources/contenttweaker/lang/en_us.lang
@@ -2110,3 +2110,19 @@ multiblocktweaker.machine.high_vacuum_evaporation_system.name=High Vacuum Evapor
 metaitem.silicon_nitride.name=Silicon Nitride Dust
 fluid.indium_gallium_arsenide_substrate=Indium Gallium Arsnide Substrate 
 fluid.mana=Mana
+fluid.poly_styrene_co_chloromethylstyrene_copolymeris=Poly(styrene-co-chloromethylstyrene)copolymeris
+metaitem.amberlyst_15.name=Amberlyst-15
+metaitem.trimethylalluminium_salts.name=Trimethylalluminium Salts
+metaitem.cadmium_oxide.name=Cadmium Oxide 
+fluid.dimethylamine_solution=Dimethylamine Solution 
+fluid.chlorodifluoromethane=Chlorodifluoromethane
+fluid.trifluoroethylene=Trifluoroethylene
+fluid.tetrafluoroethylene_mixture=Tetrafluoroethylene Mixture
+fluid.nonanol=Nonanol
+fluid.peg_alkylphenol=PEG Alkylphenol
+fluid.triton_x100=Triton x100
+fluid.ptfe_preparation_mixture=PTFE Preparation Mixture
+fluid.chloromethylstyrene=Chloromethylstyrene 
+fluid.divinylbenzene=Divinylbenzene
+fluid.1_butene=1-Butene
+item.contenttweaker.
